# JIMP2

./: .travis.yml  README.md
lab1/doublebasepalindromes/: CMakeLists.txt  DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/factorial/: Factorial.cpp
lab1/multiplicationtable/: CMakeLists.txt  MultiplicationTable.cpp  MultiplicationTable.h  main.cpp
lab1/palindrome/: Palindrome.cpp  Palindrome.h  main.cpp
lab1/reversestring/: ReverseString.cpp  ReverseString.h  main.cpp
lab10/academiascheduler/: CMakeLists.txt  Scheduler.cpp  Scheduler.h  main.cpp
lab10/algotest/: Algo.cpp  Algo.h  CMakeLists.txt  main.cpp
lab11/factorymethod/: CMakeLists.txt  FactoryMethod.cpp  FactoryMethod.h  main.cpp
lab12/timerecorder/: CMakeLists.txt  TimeRecorder.cpp  TimeRecorder.h  main.cpp
lab12/tree/: CMakeLists.txt  Tree.cpp  Tree.h  main.cpp
lab12/treeiterators/: CMakeLists.txt  Tree.cpp  Tree.h
lab2/array2d/: Array2D.cpp  Array2D.h  CMakeLists.txt  main.cpp
lab2/greatestproduct/: CMakeLists.txt  GreatestProduct.cpp  GreatestProduct.h  main.cpp
lab2/polybius/: CMakeLists.txt  Polybius.cpp  Polybius.h  main.cpp
lab2/simpleforwardlist/: CMakeLists.txt  SimpleForwardList.cpp  SimpleForwardList.h
lab2/xorcypherbreaker/: CMakeLists.txt  XorCypherBreaker.cpp  XorCypherBreaker.h  main.cpp
lab3/: CMakeLists.txt
lab3/smarttree/: CMakeLists.txt  SmartTree.cpp  SmartTree.h  main.cpp
lab5/: CMakeLists.txt
lab6/: CMakeLists.txt
lab7/academiaqueries/: CMakeLists.txt  StudentRepository.h  StudentRepositoryQueries.cpp  StudentRepositoryQueries.h  main.cpp
(+80 files in other folders)
